apps/blog/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: blog
  labels:
    app-name: wordpress
    version: ${WORDPRESS_VERSION}
    component: blog-servre
    hostNetwork: "no"
    internal-service: "no"
    managed-by: chynten
    created-by: chynten
spec:
  selector:
    matchLabels:
      app-name: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app-name: wordpress
    spec:
      containers:
        - image: ${WORDPRESS_IMAGE}:${WORDPRESS_VERSION}
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
          volumeMounts:
            - name: wordpress-persistent-storage
              mountPath: /var/www/html
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            periodSeconds: 60
            livenessProbe:
              httpGet:
                path: /
                port: 80
                scheme: HTTP
              periodSeconds: 60
            startupProbe:
              httpGet:
                path: /
                port: 80
                scheme: HTTP
              initialDelaySeconds: 30
              failureThreshold: 5
              periodSeconds: 10
      volumes:
        - name: wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: wordpress-data-pvc
