apps/blog/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  namespace: blog
  labels:
    app-name: wordpress
    version: ${WORDPRESS_VERSION}
    component: blog-servre
    hostNetwork: "no"
    internal-service: "no"
    managed-by: chynten
    created-by: chynten
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp-wordpress-80
  selector:
    app-name: wordpress
  type: ClusterIP
