apps/blog/wordpress-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wordpress-vs
  namespace: blog
  labels:
    app-name: wordpress
    version: ${WORDPRESS_VERSION}
    component: blog-servre
    hostNetwork: "no"
    internal-service: "no"
    managed-by: chynten
    created-by: chynten
spec:
  hosts:
    - $WORDPRESS_DOMAIN
  gateways:
    - wordpress-gateway
  http:
    - route:
        - destination:
            host: wordpress-svc.blog.svc.cluster.local
            port:
              number: 80
